--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://Karthikk7293.github.io/react-product-management",
-  "name": "react-app",
+  "name": "first-task",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
